--- a/Safe_Helmet/app/src/main/res/layout/settings_activity.xml
+++ b/Safe_Helmet/app/src/main/res/layout/settings_activity.xml
@@ -2,6 +2,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include layout="@layout/toolbar_main" />
+
     <FrameLayout
         android:id="@+id/settings"
         android:layout_width="match_parent"
