--- a/Safe_Helmet/app/src/main/res/layout/activity_main.xml
+++ b/Safe_Helmet/app/src/main/res/layout/activity_main.xml
@@ -7,60 +7,98 @@
     android:background="#FFFFFF"
     tools:context=".MainActivity">
 
-    <include layout="@layout/toolbar_main" />
+    <include
+        android:id="@+id/include2"
+        layout="@layout/toolbar_main" />
 
     <!--    android:background="@drawable/ic_bluetooth"-->
-
-    <Button
-        android:id="@+id/bluetooth"
-        android:layout_width="324dp"
-        android:layout_height="202dp"
-        android:layout_marginTop="108dp"
-        android:checkable="true"
-        android:clickable="true"
-        android:gravity="center"
-        android:shadowColor="#FFFFFF"
-        android:text="블루투스\n[ Y / N ]"
-        android:textColor="@color/white"
-        android:textSize="30dp"
-        app:backgroundTint="@android:color/holo_green_light"
-        app:icon="@drawable/ic_bluetooth"
-
-        app:iconGravity="textEnd"
-        app:iconSize="100dp"
-
-        app:iconTint="#FFFFFF"
-        app:iconTintMode="src_in"
+    <LinearLayout
+        android:id="@+id/linearlayout_setcolor"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="250dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.517"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:strokeColor="#FFFFFF"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toBottomOf="@+id/include">
 
-    <Button
-        android:id="@+id/battery"
-        android:layout_width="324dp"
-        android:layout_height="202dp"
-        android:layout_marginTop="324dp"
+        <Button
+            android:id="@+id/bluetooth"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:gravity="center"
+            android:shadowColor="#FFFFFF"
+            android:text="블루투스\n[ Y / N ]"
+            android:textColor="@color/white"
+            android:textSize="30dp"
+            app:backgroundTint="@android:color/holo_green_light"
+            app:icon="@drawable/ic_bluetooth"
+            app:iconGravity="textEnd"
+            app:iconSize="100dp"
+            app:iconTint="#FFFFFF"
+            app:iconTintMode="src_in"
+            app:layout_constraintHorizontal_bias="0.517"
+            app:strokeColor="#FFFFFF"
+            tools:ignore="MissingConstraints" />
 
-        android:gravity="center"
-        android:text="배터리\n(  %  )"
-        android:textColor="@color/white"
-        android:textSize="30dp"
-        app:backgroundTint="@android:color/holo_orange_light"
-        app:icon="@drawable/ic_battery_unknown"
-        app:iconGravity="textEnd"
-        app:iconSize="100dp"
-        app:iconTint="#FFFFFF"
-        app:iconTintMode="src_in"
+        <Button
+            android:id="@+id/battery"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:gravity="center"
+            android:text="배터리\n(  %  )"
+            android:textColor="@color/white"
+            android:textSize="30dp"
+            app:backgroundTint="@android:color/holo_orange_light"
+            app:icon="@drawable/ic_battery_unknown"
+            app:iconGravity="textEnd"
+            app:iconSize="100dp"
+            app:iconTint="#FFFFFF"
+            app:iconTintMode="src_in"
+            tools:ignore="MissingConstraints" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="500dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginRight="50dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.517"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintTop_toBottomOf="@+id/linearlayout_setcolor"
+        app:layout_constraintVertical_bias="0.0">
 
-<!--    <Button-->
+<!--        <Button-->
+<!--            android:id="@+id/sensor"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:gravity="center"-->
+<!--            android:text="sensor_value_Load"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="30dp"-->
+<!--            app:backgroundTint="@android:color/holo_orange_light"-->
+<!--            app:icon="@drawable/ic_battery_unknown"-->
+<!--            app:iconGravity="textEnd"-->
+<!--            app:iconSize="100dp"-->
+<!--            app:iconTint="#FFFFFF"-->
+<!--            app:iconTintMode="src_in"-->
+<!--            tools:ignore="MissingConstraints" />-->
+
+
+    </LinearLayout>
+    <!--    <Button-->
 <!--        android:id="@+id/bluetooth_button"-->
 <!--        android:layout_width="324dp"-->
 <!--        android:layout_height="50dp"-->
