[App] - 내장된 GPS를 활용하여 위도, 경도, 주소 나타내기

--- a/Safe_Helmet/app/src/main/res/layout/activity_bluetooth_communication.xml
+++ b/Safe_Helmet/app/src/main/res/layout/activity_bluetooth_communication.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BluetoothCommunication">
+    tools:context="com.save_us.safe_helmet.BluetoothCommunication">
 
     <include layout="@layout/toolbar_main" />
 
