--- a/Safe_Helmet/app/src/main/res/menu/menu_setting.xml
+++ b/Safe_Helmet/app/src/main/res/menu/menu_setting.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".SettingsActivity">
+    tools:context="com.save_us.safe_helmet.SettingsActivity">
 
     <item android:id="@+id/home_btn"
         android:title="홈 버튼"
