--- a/Safe_Helmet/app/src/main/res/layout/activity_connect_bluetooth.xml
+++ b/Safe_Helmet/app/src/main/res/layout/activity_connect_bluetooth.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ConnectBluetoothActivity">
+    tools:context="com.save_us.safe_helmet.ConnectBluetoothActivity">
 
     <include layout="@layout/toolbar_main" />
 
