--- a/Safe_Helmet/app/src/main/res/layout/activity_main.xml
+++ b/Safe_Helmet/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".MainActivity">
+    tools:context="com.save_us.safe_helmet.MainActivity">
 
     <include layout="@layout/toolbar_main" />
 
@@ -19,7 +22,7 @@
         android:layout_marginTop="100dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
-        android:layout_marginBottom="250dp"
+        android:layout_marginBottom="100dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,42 +63,91 @@
             app:iconTint="#FFFFFF"
             app:iconTintMode="src_in"
             tools:ignore="MissingConstraints" />
-    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="500dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginRight="50dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearlayout_setcolor"
-        app:layout_constraintVertical_bias="0.0">
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="126dp"
+            tools:context=".MapsActivity" />
 
-<!--        <Button-->
-<!--            android:id="@+id/sensor"-->
+        <TextView
+            android:id="@+id/ViewGPS"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="GPS 에 수신된 현재위치"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+<!--        <TextView-->
+<!--            android:id="@+id/t2"-->
 <!--            android:layout_width="match_parent"-->
 <!--            android:layout_height="wrap_content"-->
-<!--            android:gravity="center"-->
-<!--            android:text="sensor_value_Load"-->
-<!--            android:textColor="@color/white"-->
-<!--            android:textSize="30dp"-->
-<!--            app:backgroundTint="@android:color/holo_orange_light"-->
-<!--            app:icon="@drawable/ic_battery_unknown"-->
-<!--            app:iconGravity="textEnd"-->
-<!--            app:iconSize="100dp"-->
-<!--            app:iconTint="#FFFFFF"-->
-<!--            app:iconTintMode="src_in"-->
-<!--            tools:ignore="MissingConstraints" />-->
+<!--            android:text="" />-->
+<!--        <TextView-->
+<!--            android:id="@+id/ViewDistance"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="TextView"-->
+<!--            android:textAppearance="?android:attr/textAppearanceLarge"/>-->
+<!--        <TextView-->
+<!--            android:id="@+id/t1"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="" />-->
+        <TextView
+            android:id="@+id/ViewRst"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/holo_orange_light"
+            android:text="결과창"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <ToggleButton
+            android:id="@+id/toggle_GPS"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textOff="위치정보수신시작"
+            android:textOn="위치정보수신종료"/>
+
+
 
 
     </LinearLayout>
+
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_marginStart="50dp"-->
+<!--        android:layout_marginLeft="50dp"-->
+<!--        android:layout_marginTop="500dp"-->
+<!--        android:layout_marginEnd="50dp"-->
+<!--        android:layout_marginRight="50dp"-->
+<!--        android:orientation="vertical"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="1.0"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/linearlayout_setcolor"-->
+<!--        app:layout_constraintVertical_bias="0.0">-->
+
+        <!--        <Button-->
+        <!--            android:id="@+id/sensor"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:gravity="center"-->
+        <!--            android:text="sensor_value_Load"-->
+        <!--            android:textColor="@color/white"-->
+        <!--            android:textSize="30dp"-->
+        <!--            app:backgroundTint="@android:color/holo_orange_light"-->
+        <!--            app:icon="@drawable/ic_battery_unknown"-->
+        <!--            app:iconGravity="textEnd"-->
+        <!--            app:iconSize="100dp"-->
+        <!--            app:iconTint="#FFFFFF"-->
+        <!--            app:iconTintMode="src_in"-->
+        <!--            tools:ignore="MissingConstraints" />-->
+
+
+<!--    </LinearLayout>-->
     <!--    <Button-->
 <!--        android:id="@+id/bluetooth_button"-->
 <!--        android:layout_width="324dp"-->
