--- a/Safe_Helmet/app/src/main/res/menu/menu_main.xml
+++ b/Safe_Helmet/app/src/main/res/menu/menu_main.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity" >
+    tools:context="com.save_us.safe_helmet.MainActivity" >
 
     <item android:id="@+id/setting_btn"
         android:title=""
