[App] 메시지 내용 수정 1. 사고유형을 나누는 기준 수정 2. 내용에 주소 포함시킴

--- a/Safe_Helmet/app/src/main/res/layout/activity_main.xml
+++ b/Safe_Helmet/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
             android:layout_height="200dp"
             android:gravity="center"
             android:shadowColor="#FFFFFF"
-            android:text="블루투스\n[ Y / N ]"
+            android:text="블루투스"
             android:textColor="@color/white"
             android:textSize="30dp"
             app:backgroundTint="@android:color/holo_green_light"
@@ -49,11 +49,11 @@
             tools:ignore="MissingConstraints" />
 
         <Button
-            android:id="@+id/battery"
+            android:id="@+id/setting"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:gravity="center"
-            android:text="배터리\n(  %  )"
+            android:text="설정"
             android:textColor="@color/white"
             android:textSize="30dp"
             app:backgroundTint="@android:color/holo_orange_light"
